; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/port/win32/extr_socket.c_pgwin32_socket.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/port/win32/extr_socket.c_pgwin32_socket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WSA_FLAG_OVERLAPPED = common dso_local global i32 0, align 4
@INVALID_SOCKET = common dso_local global i64 0, align 8
@FIONBIO = common dso_local global i32 0, align 4
@errno = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @pgwin32_socket(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i64 1, i64* %9, align 8
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* %7, align 4
  %13 = load i32, i32* @WSA_FLAG_OVERLAPPED, align 4
  %14 = call i64 @WSASocket(i32 %10, i32 %11, i32 %12, i32* null, i32 0, i32 %13)
  store i64 %14, i64* %8, align 8
  %15 = load i64, i64* %8, align 8
  %16 = load i64, i64* @INVALID_SOCKET, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %21

18:                                               ; preds = %3
  %19 = call i32 (...) @TranslateSocketError()
  %20 = load i64, i64* @INVALID_SOCKET, align 8
  store i64 %20, i64* %4, align 8
  br label %31

21:                                               ; preds = %3
  %22 = load i64, i64* %8, align 8
  %23 = load i32, i32* @FIONBIO, align 4
  %24 = call i64 @ioctlsocket(i64 %22, i32 %23, i64* %9)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %29

26:                                               ; preds = %21
  %27 = call i32 (...) @TranslateSocketError()
  %28 = load i64, i64* @INVALID_SOCKET, align 8
  store i64 %28, i64* %4, align 8
  br label %31

29:                                               ; preds = %21
  store i64 0, i64* @errno, align 8
  %30 = load i64, i64* %8, align 8
  store i64 %30, i64* %4, align 8
  br label %31

31:                                               ; preds = %29, %26, %18
  %32 = load i64, i64* %4, align 8
  ret i64 %32
}

declare dso_local i64 @WSASocket(i32, i32, i32, i32*, i32, i32) #1

declare dso_local i32 @TranslateSocketError(...) #1

declare dso_local i64 @ioctlsocket(i64, i32, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
